--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI="mongodb+srv://jahanasherin2311:jahana%402003@cluster0.yxorpgh.mongodb.net/Drishti?retryWrites=true&w=majority&appName=Cluster0"
+JWT_SECRET="ghjkjhkjhkjhkjhkjhkjhkjhkjhkjhkj"
